2006-04-19 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Submitted by Glenn Maynard <glenn@zewt.org>:
	* include/util/crc16.h (_crc16_update): add equivalent C
	implementation as documentation.
	Closes savannah bug #16260.

2006-04-19 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* doc/examples/demo/iocompat.h: Rename ATmega164/324 to
	ATmega164P/324P, add support for ATmega644P.
	* doc/examples/demo/Makefile: (Ditto.)

2006-04-17 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* doc/examples/demo/iocompat.h: Add support for ATmega640/1280/1281.
	* doc/examples/demo/Makefile: (Ditto.)

2006-04-13 Anatoly Sokolov <aesok@post.ru>

	* include/avr/iotn2313.h(SPMEN, SELFPRGEN): Add.

2006-04-01 Anatoly Sokolov <aesok@post.ru>

	* configure.ac: Add tests for the ATmega644P support. Rename 
	ATmega164/ATmega324 to ATmega164P/ATmega324P.
	* devtools/gen-avr-lib-tree.sh: Add support for ATmega644P. Rename 
	ATmega164/ATmega324 to ATmega164P/ATmega324P.
	* include/avr/io.h: (Ditto.).
	* include/avr/wdt.h: (Ditto.).
	* doc/api/main_page.dox: Document support for ATmega644P. Rename 
	ATmega164/ATmega324 to ATmega164P/ATmega324P.
	* doc/api/using-tools.dox: (Ditto.)
	
2006-03-24 Anatoly Sokolov <aesok@post.ru>

	* Makefile.am (DIST_SUBDIRS): Add 'devtools'.
	* configure.ac (AC_CONFIG_FILES): Add 'devtools/Makefile'.
	* devtools/.cvsignore: New file.
	* devtools/Makefile.am; New file.
	[Fixed bug #16039]

2006-03-21 Anatoly Sokolov <aesok@post.ru>

	* configure.ac: add tests for the AT90USB646/647/1286/1287 support.
	* devtools/gen-avr-lib-tree.sh: add support for AT90USB646/647/1286/1287.
	* include/avr/io.h: (Ditto.).
	* include/avr/wdt.h: (Ditto.).
	* include/avr/iousb646.h: new file.
	* include/avr/iousb647.h: new file.
	* include/avr/iousb1286.h: new file.
	* include/avr/iousb1287.h: new file.
	* include/avr/iousbxx6_7.h: new file.
	* include/avr/Makefile.am: include new files.
	* doc/api/main_page.dox: Document support for AT90USB646/647/1286/1287.
	* doc/api/using-tools.dox: (Ditto.)
